tests/auto/popup/tst_popup.cpp
@@ -79,6 +79,8 @@ private slots:
     void cursorShape();
     void componentComplete();
     void closeOnEscapeWithNestedPopups();
+    void orientation_data();
+    void orientation();
 };
 
 void tst_popup::initTestCase()
@@ -938,6 +940,36 @@ void tst_popup::closeOnEscapeWithNestedPopups()
     // Remove one by pressing the Escape key (the Shortcut should be activated).
     QTest::keyClick(window, Qt::Key_Escape);
     QCOMPARE(stackView->depth(), 1);
+}
+
+void tst_popup::orientation_data()
+{
+    QTest::addColumn<Qt::ScreenOrientation>("orientation");
+    QTest::addColumn<QPointF>("position");
+
+    QTest::newRow("Portrait") << Qt::PortraitOrientation << QPointF(330, 165);
+    QTest::newRow("Landscape") << Qt::LandscapeOrientation << QPointF(165, 270);
+    QTest::newRow("InvertedPortrait") << Qt::InvertedPortraitOrientation << QPointF(270, 135);
+    QTest::newRow("InvertedLandscape") << Qt::InvertedLandscapeOrientation << QPointF(135, 330);
+}
+
+void tst_popup::orientation()
+{
+    QFETCH(Qt::ScreenOrientation, orientation);
+    QFETCH(QPointF, position);
+
+    QQuickApplicationHelper helper(this, "orientation.qml");
+
+    QQuickWindow *window = helper.window;
+    window->reportContentOrientationChange(orientation);
+    window->show();
+    QVERIFY(QTest::qWaitForWindowActive(window));
+
+    QQuickPopup *popup = window->property("popup").value<QQuickPopup*>();
+    QVERIFY(popup);
+    popup->open();
+
+    QCOMPARE(popup->popupItem()->position(), position);
 }
 
 QTEST_MAIN(tst_popup)
